--- a/webui/src/scss/style.scss
+++ b/webui/src/scss/style.scss
@@ -1,8 +1,8 @@
 body{
   background-color: black;
-  .echo{
-      color: red;
-      font-size: 50px;
-      text-align: center;
-  }
+  // .echo{
+  //     color: red;
+  //     font-size: 50px;
+  //     text-align: center;
+  // }
 }
