--- a/webui/public/css/style.css
+++ b/webui/public/css/style.css
@@ -1,2 +1,33 @@
 body {
-  background-color: black; }
+  padding: 15px 0; }
+
+ul {
+  padding-left: 0; }
+
+.ui-accordion .ui-accordion-content {
+  padding: 0; }
+
+#accordion li {
+  list-style: none;
+  padding: 10px 0;
+  z-index: 1; }
+
+#accordion li a {
+  text-decoration: none;
+  padding: 0 15px; }
+
+#accordion li a img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px; }
+
+.droparea {
+  width: 500px;
+  height: 350px;
+  background-color: #eee;
+  border-radius: 4px; }
+
+#body {
+  background-color: #eee;
+  width: 500px;
+  height: 300px; }
