--- a/webui/public/css/style.css
+++ b/webui/public/css/style.css
@@ -28,7 +28,7 @@ body {
 }
 ul {width:100%;padding: 0;margin: 0;}
 li { list-style: none; margin: 0; padding: 5px 10px;}
-li a {text-decoration: none;font-size: .8em;font-weight: bold;}
+li a {text-decoration: none;font-size: .7em;font-weight: bold;}
 
 .selection{
    float: right;
@@ -51,13 +51,20 @@ li a {text-decoration: none;font-size: .8em;font-weight: bold;}
 .submit {
    width: 50%;
    margin: 0 auto;
-   padding: 5px 10px;
+   padding: 10px 10px;
    background-color: #3d3d3d;
    color: white;
    position: absolute;
    bottom: 10px;
    left: 50px;
    text-align: center;
+   text-transform: uppercase;
+   font-size: .8em;
+   border-radius: 4px;
+}
+
+.submit i {
+   margin-right: 10px;
 }
 
 .hidden {
@@ -101,4 +108,144 @@ li a {text-decoration: none;font-size: .8em;font-weight: bold;}
 a > i {
    margin-right: 15px;
    font-size: 13px !important;
+}
+
+.clear-fix{
+   clear:both;
+}
+.services {
+   height: auto;
+}
+#header {
+   padding: 0 20px;
+}
+#header h2 {
+   text-align: center;
+}
+
+.form-style-2{
+    max-width: 500px;
+    padding: 12px;
+    font: 13px Arial, Helvetica, sans-serif;
+}
+.form-style-2-heading{
+    font-weight: bold;
+    font-style: italic;
+    border-bottom: 2px solid #ddd;
+    margin-bottom: 20px;
+    font-size: 15px;
+    padding-bottom: 8px;
+}
+.form-style-2 label{
+    display: block;
+    margin: 0px 0px 15px 0px;
+}
+.form-style-2 label > span{
+    width: 100px;
+    font-weight: bold;
+    float: left;
+    padding-top: 8px;
+    padding-right: 5px;
+}
+.form-style-2 span.required{
+    color:red;
+}
+.form-style-2 .tel-number-field{
+    width: 40px;
+    text-align: center;
+}
+.form-style-2 input.input-field{
+    width: 48%;
+
+}
+
+.form-style-2 input.input-field,
+.form-style-2 .tel-number-field,
+.form-style-2 .textarea-field,
+ .form-style-2 .select-field{
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    border: 1px solid #C2C2C2;
+    box-shadow: 1px 1px 4px #EBEBEB;
+    -moz-box-shadow: 1px 1px 4px #EBEBEB;
+    -webkit-box-shadow: 1px 1px 4px #EBEBEB;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    padding: 4px;
+    outline: none;
+}
+.form-style-2 .input-field:focus,
+.form-style-2 .tel-number-field:focus,
+.form-style-2 .textarea-field:focus,
+.form-style-2 .select-field:focus{
+    border: 1px solid #0C0;
+}
+.form-style-2 .textarea-field{
+    height:100px;
+    width: 55%;
+}
+.form-style-2 input[type=submit],
+.form-style-2 input[type=button]{
+    border: none;
+    padding: 8px 15px 8px 15px;
+    background: #FF8500;
+    color: #fff;
+    box-shadow: 1px 1px 4px #DADADA;
+    -moz-box-shadow: 1px 1px 4px #DADADA;
+    -webkit-box-shadow: 1px 1px 4px #DADADA;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+}
+.form-style-2 input[type=submit]:hover,
+.form-style-2 input[type=button]:hover{
+    background: #EA7B00;
+    color: #fff;
+}
+
+.form-style-2 .textarea-field {
+    height: 67px;
+    width: 48%;
+}
+
+#animated-gif-container {
+  /*
+  background-image:url(http://winnerhun.uw.hu/vigyorpofa.gif);
+  background-repeat:no-repeat;
+  */
+   position: absolute;
+   top: 10px;
+   right: 45px;
+  width:140px;
+  height:105px;
+
+  background:url('../img/programmer.gif') no-repeat center center;
+  background-size: 100%;
+  border: 4px solid rgba(255, 255, 255, 0.15);
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+}
+
+footer {
+   position: absolute;
+   bottom: 35px;
+   color:#3d3d3d;
+   left: 300px;
+}
+
+footer p {
+   font-size: 11px;
+}
+
+footer p a {
+   color: white;
+   text-decoration: none;
+}
+
+ul.services {
+   overflow: scroll;
+   overflow-x: hidden;
+   height: 300px;
 }
